--- a/estilo/style.css
+++ b/estilo/style.css
@@ -1,11 +1,20 @@
 @charset "UTF-8";
+@import url('https://fonts.googleapis.com/css2?family=Passion+One:wght@400;700;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Sriracha&display=swap');
 /* vh = % */
+:root {
+    --fonte1: Verdana, Geneva, Tahoma, sans-serif;
+    --fonte2: 'Passion One', cursive;
+    --fonte3: 'Sriracha', cursive;
+}
 *{
     margin:0px;
     padding: 0px;
+    font-size: 1em;
 }
 html, body{
     min-height: 100%;
+    font-family: var(--fonte1);
 }
 header{
     background-color: black;
@@ -15,6 +24,8 @@ header{
 header> h1{
     padding: 50px;
     font-variant: small-caps;
+    font-family: var(--fonte2);
+    font-size: 10vw;
 }
 header>p{
     padding-bottom: 50px;
@@ -32,6 +43,8 @@ section{
     padding-bottom: 10vh;
     line-height: 2em;
     padding-left: 30px;
+    font-family: var(--fonte3);
+    font-size: 3.5vw;
 }
 section.normal{
     background-color: white;
@@ -42,7 +55,8 @@ section.imagem{
     color: white;
 }
 section.imagem > p{
-    width: 400px;
+    display: inline-block;  /*para se adaptar ao tamanho do bloco */
+    padding:5px;
     background-color: rgba(0, 0, 0, 0.253);
 }
 footer{
