chore: background-attachment

--- a/estilo/style.css
+++ b/estilo/style.css
@@ -46,6 +46,9 @@ section{
     font-family: var(--fonte3);
     font-size: 3.5vw;
 }
+section > p{
+    padding-bottom: 2em;
+}
 section.normal{
     background-color: white;
     color: black;
@@ -53,11 +56,23 @@ section.normal{
 section.imagem{
     background-color:rgb(39, 38, 38);
     color: white;
+    box-shadow:  inset 6px 6px 13px 0 rgba(0, 0, 0, 0.507);
+    background-size: cover;
+    background-attachment: fixed;
 }
 section.imagem > p{
     display: inline-block;  /*para se adaptar ao tamanho do bloco */
     padding:5px;
     background-color: rgba(0, 0, 0, 0.253);
+    text-shadow: 2px 2px 0px black;
+}
+section#img01{
+    background-image: url('../imagens/background001.jpg');
+    background-position: right center;
+}
+section#img02{
+    background-image: url('../imagens/background002.jpg');
+    background-position: right center;
 }
 footer{
     background-color: black;
